--- a/index.html
+++ b/index.html
@@ -43,29 +43,22 @@
     <div class="slider">
         <ul class="slides">
             <li>
-                <img src="img/slider/1.png" alt="slide1">
+                <img src="img/slider/1.jpg" alt="slide1">
                 <div class="caption center-align">
                     <h3>tagline</h3>
                     <h5 class="light grey-text text-lighten-3">slide</h5>
                 </div>
             </li>
             <li>
-                <img src="img/slider/2.png" alt="slide2">
+                <img src="img/slider/2.jpg" alt="slide2">
                 <div class="caption left-align">
                     <h3>tagline</h3>
                     <h5 class="light grey-text text-lighten-3">slide</h5>
                 </div>
             </li>
             <li>
-                <img src="img/slider/3.png" alt="slide3">
+                <img src="img/slider/3.jpg" alt="slide3">
                 <div class="caption right-align">
-                    <h3>tagline</h3>
-                    <h5 class="light grey-text text-lighten-3">slide</h5>
-                </div>
-            </li>
-            <li>
-                <img src="img/slider/4.png" alt="slide4">
-                <div class="caption center-align">
                     <h3>tagline</h3>
                     <h5 class="light grey-text text-lighten-3">slide</h5>
                 </div>
@@ -105,7 +98,7 @@
 
     <!-- clients -->
     <div class="parallax-container scrollspy" id="clients">
-        <div class="parallax"><img src="img/slider/4.png"></div>
+        <div class="parallax"><img src="img/slider/4.jpg"></div>
         
         <div class="container clients">
             <h3 class="center light white-text text-darken-2">Our Clients</h3>
@@ -162,30 +155,30 @@
             <h3 class="center light grey-text text-darken-2">Portfolio</h3>
             <div class="row">
                 <div class="col m3 s12">
-                    <img src="img/portfolio/1.png" alt="portfolio1" class="responsive-img materialboxed">
+                    <img src="img/portfolio/1.jpg" alt="portfolio1" class="responsive-img materialboxed">
                 </div>
                 <div class="col m3 s12">
-                    <img src="img/portfolio/2.png" alt="portfolio1" class="responsive-img materialboxed">
+                    <img src="img/portfolio/2.jpg" alt="portfolio1" class="responsive-img materialboxed">
                 </div>
                 <div class="col m3 s12">
-                    <img src="img/portfolio/3.png" alt="portfolio1" class="responsive-img materialboxed">
+                    <img src="img/portfolio/3.jpg" alt="portfolio1" class="responsive-img materialboxed">
                 </div>
                 <div class="col m3 s12">
-                    <img src="img/portfolio/4.png" alt="portfolio1" class="responsive-img materialboxed">
+                    <img src="img/portfolio/4.jpg" alt="portfolio1" class="responsive-img materialboxed">
                 </div>
             </div>
             <div class="row">
                 <div class="col m3 s12">
-                    <img src="img/portfolio/5.png" alt="portfolio1" class="responsive-img materialboxed">
+                    <img src="img/portfolio/5.jpg" alt="portfolio1" class="responsive-img materialboxed">
                 </div>
                 <div class="col m3 s12">
-                    <img src="img/portfolio/6.png" alt="portfolio1" class="responsive-img materialboxed">
+                    <img src="img/portfolio/6.jpg" alt="portfolio1" class="responsive-img materialboxed">
                 </div>
                 <div class="col m3 s12">
                     <img src="img/portfolio/1.png" alt="portfolio1" class="responsive-img materialboxed">
                 </div>
                 <div class="col m3 s12">
-                    <img src="img/portfolio/2.png" alt="portfolio1" class="responsive-img materialboxed">
+                    <img src="img/portfolio/2.jpg" alt="portfolio1" class="responsive-img materialboxed">
                 </div>
             </div>
         </div>
